--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -70,7 +70,7 @@
     </main>
 
     <footer class="bg-gray-800 text-white text-center p-4 mt-8">
-        <p>&copy; {{ current_year }} My Website. All rights reserved.</p>
+        <p>&copy; {{ current_year }} Learning Log. All rights reserved.</p>
     </footer>
 
     <script>
